--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "redux-logger": "^2.7.4",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
