--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
